# cat-cannon

./: .gitignore  README.md  pyproject.toml
configs/: app.example.yaml  zones.example.yaml  zones.yaml
docs/: capability-contract.md  deployment-workflow.md  laptop-bench.md  rp2040-interface.md
firmware/pico/: README.md  main.py  pico_config.py
scripts/: bench.sh  deploy_all.sh  deploy_jetson.sh  deploy_pico.sh  flash_pico_uf2.sh  run_fixed_camera.sh  run_teleop.sh  run_tracking_test.sh  run_tracking_test_x11.sh  run_zone_calibrator.sh  setup_cameras.sh  smoke_test.sh
src/cat_cannon/: __init__.py  config.py
src/cat_cannon/adapters/: camera.py  controller.py  deepstream.py  interfaces.py  micropython_deploy.py  rp2040_discovery.py  rp2040_protocol.py  rp2040_serial.py  ultralytics_yolo.py
src/cat_cannon/app/: bench.py  calibrate_zones.py  controller_session.py  deploy_jetson.py  deploy_pico.py  replay.py  run.py  smoke_test.py  supervisor.py  teleop.py  tracking_test.py  zone_calibration.py
src/cat_cannon/domain/: __init__.py  geometry.py  models.py  safety.py  state_machine.py  targeting.py
systemd/: 99-cat-cannon-cameras.rules  cat-cannon.service
tests/: test_controller_session.py  test_deploy_jetson.py  test_geometry.py  test_micropython_deploy.py  test_replay.py  test_rp2040_discovery.py  test_rp2040_protocol.py  test_rp2040_serial.py  test_safety.py  test_state_machine.py  test_supervisor_loop.py  test_teleop.py  test_tracking_test.py  test_tracking_x11_script.py  test_ultralytics_yolo.py  test_zone_calibration.py
